--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -1,5 +1,8 @@
 [package]
 name = "jemalloc-info"
+description = "A small library for exporting jemalloc allocation data in Elixir"
+repository = "https://github.com/discord/jemalloc_info"
+license = "MIT"
 version = "0.1.0"
 authors = ["oceans <sea@likeanocean.com>"]
 edition = "2018"
