--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,8 @@ jobs:
     - uses: actions/checkout@v2
     - uses: erlef/setup-elixir@v1
       with:
-        otp-version: '23.3'
-        elixir-version: 1.11.4
+        otp-version: '24.0'
+        elixir-version: 1.12.2
     - uses: actions-rs/toolchain@v1
       with:
         toolchain: stable
@@ -38,8 +38,8 @@ jobs:
         override: true
     - uses: erlef/setup-elixir@v1
       with:
-        otp-version: '23.3'
-        elixir-version: 1.11.4
+        otp-version: '24.0'
+        elixir-version: 1.12.2
     - run: cargo fmt --all -- --check
       working-directory: ./native
     - run: mix format --check-formatted
@@ -58,6 +58,10 @@ jobs:
           elixir-version: 1.7.4
         - otp-version: '23.3'
           elixir-version: 1.11.4
+        - otp-version: '24.0'
+          elixir-version: 1.11.4
+        - otp-version: '24.0'
+          elixir-version: 1.12.2
     steps:
     - uses: actions/checkout@v2
     - uses: actions-rs/toolchain@v1
