--- a/native/Cargo.toml
+++ b/native/Cargo.toml
@@ -3,9 +3,10 @@ name = "jemalloc-info"
 description = "A small library for exporting jemalloc allocation data in Elixir"
 repository = "https://github.com/discord/jemalloc_info"
 license = "MIT"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["oceans <sea@likeanocean.com>"]
 edition = "2018"
+readme = "../README.md"
 
 [dependencies]
 jemalloc-ctl = "0.3"
